--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -4,10 +4,10 @@
             <a href="{{ $.Site.BaseURL }}">
                 {{ $.Site.Title }}
             </a>
+            <div id="hamburger" class="spShow close partials__header__hamburger">
+                <div class="partials__header__hamburger__line"></div>
+            </div>
         </div>
-        <div id="hamburger" class="spShow close partials__header__hamburger">
-            <div class="partials__header__hamburger__line"></div>
-        </div>        
         <nav id="hamburgerMenu" class="close partials__header__menu">
             <ul class="partials__header__menu__items">
                 {{ range $item := $.Site.Params.topMenu }}
@@ -17,21 +17,19 @@
                 {{ end }}
             </ul>
         </nav>
-        <div id="hamburgerMenuOverlay" class="close partials__header__overlay"></div>
     </div>
 {{ end }}
 
-{{ define "script" }}
+{{ define "header-script" }}
     <script>
-        document.querySelectorAll('#hamburger, #hamburgerMenuOverlay').forEach(ele => {
+        document.querySelectorAll('#hamburger, #overlay').forEach(ele => {
             ele.addEventListener('click', function(ev) {
-                console.log('click')
                 document.querySelector('#hamburger').classList.toggle('open')
                 document.querySelector('#hamburger').classList.toggle('close')
                 document.querySelector('#hamburgerMenu').classList.toggle('open')
                 document.querySelector('#hamburgerMenu').classList.toggle('close')
-                document.querySelector('#hamburgerMenuOverlay').classList.toggle('open')
-                document.querySelector('#hamburgerMenuOverlay').classList.toggle('close')
+                document.querySelector('#overlay').classList.toggle('open')
+                document.querySelector('#overlay').classList.toggle('close')
             })
         })
     </script>
