--- a/assets/scss/layouts/partials/header.scss
+++ b/assets/scss/layouts/partials/header.scss
@@ -1,6 +1,7 @@
 .partials {
     &__header {
         &__title {
+            position: relative;
             padding: 20px 0;
             font-size: 32px;
             font-weight: bold;
@@ -8,10 +9,11 @@
         }
         &__hamburger {
             position: absolute;
-            top: 20px;
-            right: 15px;
-            width: 35px;
-            height: 25px;
+            right: 0;
+            top: 50%;
+            transform: translateY(-50%);
+            width: 33px;
+            height: 23px;
             &::before {
                 content: "";
                 width: 100%;
@@ -19,10 +21,10 @@
                 top: 0;
                 border-top: 2px solid $title-border;
                 transition: 0.3s ease-in-out;
-                &.open {
-                    top: 45%;
-                    transform: rotate(45deg);
-                }
+            }
+            &.open::before {
+                top: 45%;
+                transform: rotate(45deg);
             }
             &::after {
                 content: "";
@@ -31,10 +33,10 @@
                 bottom: 0;
                 border-top: 2px solid $title-border;
                 transition: 0.3s ease-in-out;
-                &.open {
-                    bottom: 45%;
-                    transform: rotate(135deg);
-                }
+            }
+            &.open::after {
+                bottom: 45%;
+                transform: rotate(135deg);
             }
             &__line {
                 width: 100%;
@@ -70,20 +72,6 @@
                 color: $header-menu;
             }
         }
-        &__overlay {
-            display: none;
-            position: absolute;
-            top: $sp-header-height;
-            left: 0;
-            z-index: 1;
-            width: 100vh;
-            height: 100vh;
-            background: #000;
-            opacity: 0.2;
-            &.open {
-                display: block;
-            }
-        }
     }
 }
 
@@ -97,10 +85,11 @@
             &__menu {
                 position: absolute;
                 width: 100%;
-                top: $sp-header-height;
                 right: -100%;
-                z-index: 2;
+                margin-top: 14px;
                 background: #fff;
+                border-top: 1px solid $border;
+                border-bottom: 1px solid $border;
                 transition: 0.3s ease-in-out;
                 &.open {
                     right: 0;
