--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -7,6 +7,7 @@
 @import "layouts/_default/list.scss";
 @import "layouts/_default/single.scss";
 @import "layouts/index.scss";
+@import "layouts/not-found.scss";
 @import "layouts/partials/header.scss";
 @import "layouts/partials/sidebar.scss";
 @import "layouts/partials/footer.scss";
