--- a/assets/scss/variable.scss
+++ b/assets/scss/variable.scss
@@ -1,11 +1,24 @@
-// Colors
-$base-background: #f6f6f6;
-$site-title:#494949;
-$header-menu:#333;
-$footer-menu:#333;
+// Base
+$base-font-color: #000;
+$base-background: #fff;
+
+// Site
+$site-title-color:#494949;
+$site-title-font-size: 30px;
+$header-menu-color:#333;
+$footer-menu-color:#333;
+
+// Backgrounds
+$header-background: #fff;
+$content-background: #f6f6f6;
+$footer-background: #fff;
+
+// Site detail
 $title-border:#494949;
-$border: #e8e8e8;
+$border: #ccc;
+$light-border: #e8e8e8;
 $light-background: #f5f5f5;
 $light-text: #8f8f8f;
-// width
+
+// Sp width
 $sp-width: 600px;
