--- a/assets/scss/layouts/not-found.scss
+++ b/assets/scss/layouts/not-found.scss
@@ -2,8 +2,8 @@
     &__title {
         margin: 20px 10px 10px 10px;
         padding: 5px 20px;
-        box-shadow: 2px 1px 4px #ccc;
-        background: #fff;
+        box-shadow: 2px 1px 4px $border;
+        background: $base-background;
         border-left: 10px solid $title-border;
         font-size: 25px;
     }
