--- a/assets/scss/layouts/partials/article-card.scss
+++ b/assets/scss/layouts/partials/article-card.scss
@@ -10,7 +10,7 @@
             width: 100%;
             height: 100%;
             padding: 20px;
-            background: #FFF;
+            background: $base-background;
             box-shadow: 0 0 5px rgba(0, 0, 0, .05)
         }
         &__inner:hover * {
