--- a/assets/scss/layouts/partials/footer.scss
+++ b/assets/scss/layouts/partials/footer.scss
@@ -7,7 +7,7 @@
             &__list {
                 list-style: none;
                 font-size: 15px;
-                color: $footer-menu;
+                color: $footer-menu-color;
                 & li:not(:first-child) {
                     margin-top: 5px;
                 }
