--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -33,6 +33,9 @@
         </nav>
 
         <nav class="partials__sidebar__menu">
+            <h3 class="partials__sidebar__menu__title">
+                メニュー
+            </h3>
             <ul class="partials__sidebar__menu__items">
                 {{ range .Site.Params.sideMenu }}
                     <li class="partials__sidebar__menu__item">
