--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,13 +1,23 @@
 <div class="partials__footer">
     <div class="partials__footer__menu">
-        <ul class="partials__footer__menu__list">
-            <li><a href="{{ "about" | relURL }}">このサイトについて</a></li>
-            <li><a href="{{ "information" | relURL }}">お知らせ</a></li>
-        </ul>
-        <ul class="partials__footer__menu__list">
-            <li><a href="{{ "term" | relURL }}">利用規約・プライバシーポリシー</a></li>
-            <li><a href="{{ .Site.Params.contactLink }}">お問い合わせ</a></li>
-        </ul>
+        <nav>
+            {{- if .Site.Params.footerMenu.left -}}
+                <ul class="partials__footer__menu__list">
+                    {{- range .Site.Params.footerMenu.left -}}
+                        <li><a href="{{- .url | relURL -}}">{{- .title -}}</a></li>
+                    {{- end -}}
+                </ul>
+            {{- end -}}
+        </nav>
+        <nav>
+            {{- if .Site.Params.footerMenu.right -}}
+                <ul class="partials__footer__menu__list">
+                    {{- range .Site.Params.footerMenu.right -}}
+                        <li><a href="{{- .url | relURL -}}">{{- .title -}}</a></li>
+                    {{- end -}}
+                </ul>
+            {{- end -}}
+        </nav>
     </div>
     <p class="partials__footer__copyright">
         {{ if .Site.Params.copyright.link }}
