--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,24 +1,18 @@
 <div class="partials__footer">
-    <div class="partials__footer__menu">
-        <nav>
-            {{- if .Site.Params.footerMenu.left -}}
-                <ul class="partials__footer__menu__list">
-                    {{- range .Site.Params.footerMenu.left -}}
-                        <li><a href="{{- .url | relURL -}}">{{- .title -}}</a></li>
-                    {{- end -}}
-                </ul>
-            {{- end -}}
-        </nav>
-        <nav>
-            {{- if .Site.Params.footerMenu.right -}}
-                <ul class="partials__footer__menu__list">
-                    {{- range .Site.Params.footerMenu.right -}}
-                        <li><a href="{{- .url | relURL -}}">{{- .title -}}</a></li>
-                    {{- end -}}
-                </ul>
-            {{- end -}}
-        </nav>
-    </div>
+    {{ if .Site.Menus.footer }}
+        <div class="partials__footer__menu">
+            <ul class="partials__footer__menu__list">
+                {{ range where .Site.Menus.footer ".Params.position" "==" "left" }}
+                    <li><a href="{{- .URL -}}">{{- .Name -}}</a></li>
+                {{- end -}}
+            </ul>
+            <ul class="partials__footer__menu__list">
+                {{ range where .Site.Menus.footer ".Params.position" "==" "right" }}
+                    <li><a href="{{- .URL -}}">{{- .Name -}}</a></li>
+                {{- end -}}
+            </ul>
+        </div>
+    {{ end }}
     <p class="partials__footer__copyright">
         {{ if .Site.Params.copyright.link }}
             ©&nbsp;{{ .Site.Params.copyright.year }}&nbsp;<a href="{{ .Site.Params.copyright.link }}">{{ .Site.Params.copyright.author }}</a>
