--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -10,9 +10,9 @@
         </div>
         <nav id="hamburgerMenu" class="close partials__header__menu">
             <ul class="partials__header__menu__items">
-                {{ range $item := $.Site.Params.topMenu }}
+                {{ range .Site.Menus.header }}
                     <li class="partials__header__menu__item">
-                        <a href="{{ $item.url | relURL }}" class="partials__header__menu__itemLink">{{ $item.title }}</a>
+                        <a href="{{ .URL }}" class="partials__header__menu__itemLink">{{ .Name }}</a>
                     </li>
                 {{ end }}
             </ul>
