robotoフォントの方が等幅なので変更

--- a/assets/scss/variable.scss
+++ b/assets/scss/variable.scss
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 // Base
 $base-font-color: #000;
 $base-background: #fff;
-$base-font: 'Noto Sans JP', sans-serif;
+$base-font: 'Hiragino Kaku Gothic ProN', 'Yu Gothic', 'Roboto', sans-serif;
 
 // Site
 $site-title-color:#494949;
