markdown用スタイルシート導入

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -30,7 +30,7 @@
                 <img src="{{ $thumbnail.RelPermalink  }}" alt="{{ .Title }}" loading="lazy" class="single__article__thumbnail">
             {{ end }}
             
-            <div class="single__article__content">
+            <div class="single__article__content markdown-body">
                 {{ .Content }}
             </div>
         </article>
