--- a/assets/scss/layouts/_default/single.scss
+++ b/assets/scss/layouts/_default/single.scss
@@ -55,51 +55,8 @@
             line-height: 200%;
             word-break: break-all;
             h1 {
-                margin-top: 35px;
-                margin-bottom: 20px;
-                padding: 5px 20px;
+                padding-left: 20px;
                 border-left: 10px solid $title-border;
-            }
-            h2 {
-                margin-top: 30px;
-                margin-bottom: 15px;
-                padding-bottom: 2px;
-                border-bottom: 2px solid $title-border;
-            }
-            h3 {
-                margin-top: 25px;
-                margin-bottom: 10px;
-            }
-            h4 {
-                margin-top: 20px;
-                margin-bottom: 5px;
-            }
-            h5 {
-                margin-top: 15px;
-            }
-            h6 {
-                margin-top: 10px;
-            }
-            p {
-                margin: 10px 0;
-                > code {
-                    padding: 1px 3px;
-                    background: #eee;
-                }
-            }
-            ul, ol {
-                margin-left: 20px;
-            }
-            .highlight {
-                & pre {
-                    padding: 5px;
-                }
-            }
-            a {
-                text-decoration: underline;
-            }
-            img {
-                margin: auto;
             }
         }
     }
