--- a/layouts/404.html
+++ b/layouts/404.html
@@ -8,7 +8,7 @@
             </div>
             {{ $image := resources.Get .Site.Params.notFoundImage }}
             {{ if $image }}
-                {{ $image = $image.Fit "640x640 center webp" }}
+                {{ $image = $image.Fit (printf "640x640 center q%d webp" .Site.Params.imageQuality) }}
                 <img src="{{ $image.RelPermalink  }}" alt="404 Not Found" loading="lazy" class="notFound__image">
             {{ end }}
         </div>
