サイドバーにもpickupsを表示するように修正

--- a/assets/scss/layouts/partials/sidebar.scss
+++ b/assets/scss/layouts/partials/sidebar.scss
@@ -82,7 +82,7 @@
                 margin-top: 2px;
             }
         }
-        &__newArticle {
+        &__article {
             @extend %__card;
             &__title {
                 @extend %__title;
