記事ページに関連記事表示

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -12,6 +12,7 @@
 @import "layouts/partials/sidebar.scss";
 @import "layouts/partials/footer.scss";
 @import "layouts/partials/article-card.scss";
+@import "layouts/partials/related-article.scss";
 @import "layouts/partials/breadcrumb.scss";
 @import "layouts/partials/sns-links.scss";
 @import "layouts/partials/share-links.scss";
