--- a/assets/scss/layouts/_default/single.scss
+++ b/assets/scss/layouts/_default/single.scss
@@ -60,6 +60,16 @@
             }
         }
     }
+    &__relatedArticleList {
+        &__title {
+            margin-top: 20px;
+            padding: 5px 20px;
+            box-shadow: 2px 1px 4px $border;
+            background: $base-background;
+            border-left: 10px solid $title-border;
+            font-size: 25px;
+        }
+    }
     &__navigation {
         margin-top: 20px;
         display: flex;
