--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -34,6 +34,17 @@
                 {{ .Content }}
             </div>
         </article>
+
+        {{ $related := .Site.RegularPages.Related . | first .Site.Params.relatedArticleLimit }}
+        {{ with $related }}
+            <div class="single__relatedArticleList">
+                <h3 class="single__relatedArticleList__title">関連記事</h3>
+                {{ range . }}
+                    {{ partial "related-article" . }}
+                {{ end }}
+            </div>
+        {{ end }}
+
         <div class="single__navigation">
             {{ with .PrevInSection }}
                 <a href="{{ .Permalink }}" class="single__navigation__prev">{{ .LinkTitle }}</a>
