--- a/assets/scss/variable.scss
+++ b/assets/scss/variable.scss
@@ -24,5 +24,7 @@ $light-border: #e8e8e8;
 $light-background: #f5f5f5;
 $light-text: #8f8f8f;
 
-// Sp width
+// Size
+$menu-icon-size: 100px;
+$sp-menu-icon-size: 100px;
 $sp-width: 600px;
