--- a/assets/scss/layouts/_default/single.scss
+++ b/assets/scss/layouts/_default/single.scss
@@ -24,7 +24,7 @@
             border-bottom: 3px solid $title-border;
         }
         &__shareLinks {
-            margin-bottom: 40px;
+            margin-bottom: 20px;
         }
         &__tag {
             &__items {
@@ -50,7 +50,7 @@
             margin: 20px auto;
         }
         &__content {
-            margin: 20px 10px;
+            margin: 40px 10px;
             font-size: 16px;
             line-height: 200%;
             word-break: break-all;
@@ -141,6 +141,11 @@
                 p {
                     margin: 15px 0;
                 }
+            }
+        }
+        &__relatedArticleList {
+            &__title {
+                margin-bottom: 10px;
             }
         }
         &__navigation {
