--- a/assets/scss/layouts/index.scss
+++ b/assets/scss/layouts/index.scss
@@ -1,6 +1,5 @@
 .index {
     %__title {
-        margin: 20px 10px 10px 10px;
         padding: 5px 20px;
         box-shadow: 2px 1px 4px $border;
         background: $base-background;
@@ -8,9 +7,11 @@
     }
     &__title {
         @extend %__title;
+        margin: 20px 10px 10px 10px;
         border-left: 10px solid $title-border;
         &--pickup {
             @extend %__title;
+            margin: 20px 10px 10px 10px;
             border-left: 10px solid $pickup-title-border;
         }
     }
@@ -24,7 +25,10 @@
 @media only screen and (max-width: $sp-width) {
     .index {
         &__title {
-            margin: auto;
+            margin-top: 10px;
+            &--pickup {
+                margin-top: 10px;
+            }
         }
         &__articleCardList {
             display: flex;
