--- a/assets/scss/layouts/partials/related-article.scss
+++ b/assets/scss/layouts/partials/related-article.scss
@@ -4,7 +4,7 @@
         display: block;
         width: 760px;
         font-size: 14px;
-        margin: 10px 0;
+        padding: 10px 0;
         &__inner {
             position: relative;
             width: 100%;
@@ -56,6 +56,7 @@
     .partials {
         &__relatedArticle {
             width: 100%;
+            padding: 10px;
             &__inner {
                 display: flex;
                 flex-direction: column;
