scssアイコン変数名修正

--- a/assets/scss/layouts/partials/sidebar.scss
+++ b/assets/scss/layouts/partials/sidebar.scss
@@ -54,8 +54,8 @@
                 margin: auto;
             }
             &__item {
-                width: $menu-icon-size;
-                height: $menu-icon-size;
+                width: $pc-menu-icon-size;
+                height: $pc-menu-icon-size;
                 margin: 10px auto;
                 border: 1px solid $light-border;
                 border-radius: 10%;
