--- a/assets/scss/variable.scss
+++ b/assets/scss/variable.scss
@@ -25,6 +25,6 @@ $light-background: #f5f5f5;
 $light-text: #8f8f8f;
 
 // Size
-$menu-icon-size: 100px;
+$pc-menu-icon-size: 100px;
 $sp-menu-icon-size: 100px;
 $sp-width: 600px;
