--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -1,94 +1,74 @@
 {{ define "sidebar" }}
     <div class="partials__sidebar">
-        <nav class="partials__sidebar__profile">
-            <h3 class="partials__sidebar__profile__title">
+        <div class="partials__sidebar__card">
+            <h3 class="partials__sidebar__title">
                 プロフィール
             </h3>
-            {{ $icon := resources.Get .Site.Params.profile.icon }}
-            {{ if $icon }}
-                {{ $icon = $icon.Fill (printf "200x200 center q%d webp" .Site.Params.imageQuality) }}
-            {{ else }}
-                {{ $icon = resources.Get .Site.Params.dafaultNoimage }}
-                {{ $icon = $icon.Fill (printf "200x200 center q%d webp" .Site.Params.imageQuality) }}
-            {{ end }}
-            <img src="{{ $icon.Permalink }}" alt="icon" class="partials__sidebar__profile__icon">
-            <div class="partials__sidebar__profile__name">
-                {{ .Site.Params.profile.name }}
-            </div>
-            <div class="partials__sidebar__profile__description">
-                {{ .Site.Params.profile.description }}
-            </div>
-            {{ partial "sns-links" (dict "link" .Site.Params.profile.link ) }}
-        </nav>
+            <nav class="partials__sidebar__profile">
+                {{ $icon := resources.Get .Site.Params.profile.icon }}
+                {{ if $icon }}
+                    {{ $icon = $icon.Fill (printf "200x200 center q%d webp" .Site.Params.imageQuality) }}
+                {{ else }}
+                    {{ $icon = resources.Get .Site.Params.dafaultNoimage }}
+                    {{ $icon = $icon.Fill (printf "200x200 center q%d webp" .Site.Params.imageQuality) }}
+                {{ end }}
+                <img src="{{ $icon.Permalink }}" alt="icon" class="partials__sidebar__profile__icon">
+                <div class="partials__sidebar__profile__name">
+                    {{ .Site.Params.profile.name }}
+                </div>
+                <div class="partials__sidebar__profile__description">
+                    {{ .Site.Params.profile.description }}
+                </div>
+                {{ partial "sns-links" (dict "link" .Site.Params.profile.link ) }}
+            </nav>
+        </div>
 
-        <nav class="partials__sidebar__information">
-            <h4 class="partials__sidebar__information__title">
+        <div class="partials__sidebar__card">
+            <h4 class="partials__sidebar__title">
                 お知らせ
             </h4>
-            <a href="{{ "information" | relURL }}">
-                <div>
-                    {{ with .Site.GetPage "/information" }}
-                        {{ if .Page.Content }}
-                            {{ index (split .RawContent "\n\n") 0 }}
+            <nav class="partials__sidebar__information">
+                <a href="{{ "information" | relURL }}">
+                    <div>
+                        {{ with .Site.GetPage "/information" }}
+                            {{ if .Page.Content }}
+                                {{ index (split .RawContent "\n\n") 0 }}
+                            {{ end }}
                         {{ end }}
-                    {{ end }}
-                </div>
-            </a>
-        </nav>
+                    </div>
+                </a>
+            </nav>
+        </div>
 
-        <nav class="partials__sidebar__menu">
-            <h3 class="partials__sidebar__menu__title">
+        <div class="partials__sidebar__card">
+            <h3 class="partials__sidebar__title">
                 メニュー
             </h3>
-            <ul class="partials__sidebar__menu__items">
-                {{ range .Site.Menus.sidebar }}
-                    <li class="partials__sidebar__menu__item">
-                        <a href="{{ .URL }}" class="partials__sidebar__menu__itemLink">
-                            <div class="partials__sidebar__menu__itemIcon">
-                                {{ .Pre }}
-                            </div>
-                            <div class="partials__sidebar__menu__itemTitle">
-                                {{ .Name }}
-                            </div>
-                        </a>
-                    </li>
-                {{ end }}
-            </ul>
-        </nav>
+            <nav class="partials__sidebar__menu">
+                <ul class="partials__sidebar__menu__items">
+                    {{ range .Site.Menus.sidebar }}
+                        <li class="partials__sidebar__menu__item">
+                            <a href="{{ .URL }}" class="partials__sidebar__menu__itemLink">
+                                <div class="partials__sidebar__menu__itemIcon">
+                                    {{ .Pre }}
+                                </div>
+                                <div class="partials__sidebar__menu__itemTitle">
+                                    {{ .Name }}
+                                </div>
+                            </a>
+                        </li>
+                    {{ end }}
+                </ul>
+            </nav>
+        </div>
 
-        <nav class="partials__sidebar__article">
-            <h3 class="partials__sidebar__article__title">
+        <div class="partials__sidebar__card">
+            <h3 class="partials__sidebar__title">
                 新着記事
             </h3>
-            <ul class="partials__sidebar__article__items">
-                {{ range first .Site.Params.newArticleLimit (where .Site.RegularPages.ByDate.Reverse ".Section" "==" "article") }}
-                    <li class="partials__sidebar__article__item">
-                        <a href="{{ .Permalink }}" class="partials__sidebar__article__itemLink">
-                            {{ $thumbnail := .Resources.Match "thumbnail.*" }}
-                            {{ if $thumbnail }}
-                                {{ $thumbnail = (index $thumbnail 0).Fill (printf "192x108 center q%d webp" .Site.Params.imageQuality) }}
-                            {{ else }}
-                                {{ $thumbnail = resources.Get .Site.Params.dafaultNoimage }}
-                                {{ $thumbnail = $thumbnail.Fill (printf "192x108 center q%d webp" .Site.Params.imageQuality) }}
-                            {{ end }}
-                            <img src='{{ $thumbnail.Permalink }}' alt="{{ .Title }}" loading="lazy" class="partials__sidebar__article__itemThumbnail">
-                            <div class="partials__sidebar__article__itemTitle">
-                                {{ .Title }}
-                            </div>
-                        </a>
-                    </li>
-                </li>
-              {{ end }}
-            </ul>
-        </nav>
-
-        {{ if .Site.Taxonomies.pickups.sidebar  }}
             <nav class="partials__sidebar__article">
-                <h3 class="partials__sidebar__article__title--pickup">
-                    ピックアップ
-                </h3>
                 <ul class="partials__sidebar__article__items">
-                    {{ range .Site.Taxonomies.pickups.sidebar }}
+                    {{ range first .Site.Params.newArticleLimit (where .Site.RegularPages.ByDate.Reverse ".Section" "==" "article") }}
                         <li class="partials__sidebar__article__item">
                             <a href="{{ .Permalink }}" class="partials__sidebar__article__itemLink">
                                 {{ $thumbnail := .Resources.Match "thumbnail.*" }}
@@ -105,37 +85,71 @@
                             </a>
                         </li>
                     </li>
-                {{ end }}
+                  {{ end }}
                 </ul>
             </nav>
+        </div>
+
+        {{ if .Site.Taxonomies.pickups.sidebar  }}
+            <div class="partials__sidebar__card">
+                <h3 class="partials__sidebar__title--pickup">
+                    ピックアップ
+                </h3>
+                <nav class="partials__sidebar__article">
+                    <ul class="partials__sidebar__article__items">
+                        {{ range .Site.Taxonomies.pickups.sidebar }}
+                            <li class="partials__sidebar__article__item">
+                                <a href="{{ .Permalink }}" class="partials__sidebar__article__itemLink">
+                                    {{ $thumbnail := .Resources.Match "thumbnail.*" }}
+                                    {{ if $thumbnail }}
+                                        {{ $thumbnail = (index $thumbnail 0).Fill (printf "192x108 center q%d webp" .Site.Params.imageQuality) }}
+                                    {{ else }}
+                                        {{ $thumbnail = resources.Get .Site.Params.dafaultNoimage }}
+                                        {{ $thumbnail = $thumbnail.Fill (printf "192x108 center q%d webp" .Site.Params.imageQuality) }}
+                                    {{ end }}
+                                    <img src='{{ $thumbnail.Permalink }}' alt="{{ .Title }}" loading="lazy" class="partials__sidebar__article__itemThumbnail">
+                                    <div class="partials__sidebar__article__itemTitle">
+                                        {{ .Title }}
+                                    </div>
+                                </a>
+                            </li>
+                        </li>
+                    {{ end }}
+                    </ul>
+                </nav>
+            </div>
         {{ end }}
 
-        <nav class="partials__sidebar__category">
-            <h3 class="partials__sidebar__category__title">
+        <div class="partials__sidebar__card">
+            <h3 class="partials__sidebar__title">
                 カテゴリー
             </h3>
-            <ul class="partials__sidebar__category__items">
-                {{ range .Site.Taxonomies.categories.ByCount }}
-                    <li class="partials__sidebar__category__item">
-                        <a href="{{ "categories" | relURL }}/{{ .Term }}" class="partials__sidebar__category__itemLink">
-                            <div>
-                                <i class="fas fa-arrow-circle-right partials__sidebar__category__itemIcon"></i>
-                                {{ .Term }}
-                            </div>
-                            <div class="partials__sidebar__category__itemCount">
-                                {{ .Count }}
-                            </div>
-                        </a>
-                    </li>
-                {{ end }}
-            </ul>
-        </nav>
+            <nav class="partials__sidebar__category">
+                <ul class="partials__sidebar__category__items">
+                    {{ range .Site.Taxonomies.categories.ByCount }}
+                        <li class="partials__sidebar__category__item">
+                            <a href="{{ "categories" | relURL }}/{{ .Term }}" class="partials__sidebar__category__itemLink">
+                                <div>
+                                    <i class="fas fa-arrow-circle-right partials__sidebar__category__itemIcon"></i>
+                                    {{ .Term }}
+                                </div>
+                                <div class="partials__sidebar__category__itemCount">
+                                    {{ .Count }}
+                                </div>
+                            </a>
+                        </li>
+                    {{ end }}
+                </ul>
+            </nav>
+        </div>
 
-        <nav class="partials__sidebar__tag">
-            <h3 class="partials__sidebar__tag__title">
+        <div class="partials__sidebar__card">
+            <h3 class="partials__sidebar__title">
                 タグ
             </h3>
-            {{ partial "tag-list.html" (dict "tags" .Site.Taxonomies.tags.ByCount) }}
-        </nav>
+            <nav class="partials__sidebar__tag">
+                {{ partial "tag-list.html" (dict "tags" .Site.Taxonomies.tags.ByCount) }}
+            </nav>
+        </div>
     </div>
 {{ end }}
