--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -54,9 +54,9 @@
     <link rel='canonical' href='{{ .Permalink }}'>
     {{ $style := resources.Get "scss/style.scss" | toCSS | minify | fingerprint }}
     <link rel="stylesheet" href="{{ $style.Permalink }}">
-    <link rel="stylesheet" href="/css/vendor/@fortawesome/fontawesome-free/css/all.min.css">
+    <link rel="stylesheet" href="/css/vendor/@fortawesome/fontawesome-free/css/all.min.css" media="print" onload="this.media='all'">
     {{ if .IsPage }}
-        <link rel="stylesheet" href="/css/vendor/github-markdown-css/github-markdown.css">
+        <link rel="stylesheet" href="/css/vendor/github-markdown-css/github-markdown.css" media="print" onload="this.media='all'">
     {{ end }}
     {{- partial "head-script.html" . -}}
     {{ template "_internal/google_analytics.html" . }}
