関連記事のディスクリプションがはみ出すので修正

--- a/assets/scss/layouts/partials/related-article.scss
+++ b/assets/scss/layouts/partials/related-article.scss
@@ -47,6 +47,7 @@
             -webkit-box-orient: vertical;
             -webkit-line-clamp: 4;
             overflow: hidden;
+            word-break: break-all;
         }
     }
 }
