--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -5,13 +5,13 @@
                 {{ partial "breadcrumb.html" . }}
                 <div class="pcShow single__article__date">
                     <i class="far fa-calendar-alt"></i>{{ .Date.Format "2006-01-02" }}
-                    &#032;&#047;&#032;<i class="fas fa-sync-alt"></i>{{ .Date.Format "2006-01-02" }}
+                    &#032;&#047;&#032;<i class="fas fa-sync-alt"></i>{{ .Lastmod.Format "2006-01-02" }}
                 </div>
             </div>
             <h1 class="single__article__title">{{ .Title }}</h1>
             <div class="spShow single__article__date">
                 <i class="far fa-calendar-alt"></i>{{ .Date.Format "2006-01-02" }}
-                &#032;&#047;&#032;<i class="fas fa-sync-alt"></i>{{ .Date.Format "2006-01-02" }}
+                &#032;&#047;&#032;<i class="fas fa-sync-alt"></i>{{ .Lastmod.Format "2006-01-02" }}
             </div>
             {{ if .Params.share }}
                 <section class="single__article__shareLinks">
