一覧ページを記事更新日順に表示されるように修正

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -5,7 +5,7 @@
             <h1 class="list__title">{{ .Title }}</h1>
         </div>
         <div class="list__articleCardList">
-            {{ range .Paginator.Pages }}
+            {{ range (.Paginate .RegularPages).Pages.ByLastmod.Reverse }}
                 {{ partial "article-card" . }}
             {{ end }}
         </div>
