タクソノミーの一覧ページ作成

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-    <section>
+    <section class="single">
         <article class="single__article">
             <div class="single__article__header">
                 {{ partial "breadcrumb.html" . }}
