--- a/assets/scss/layouts/_default/list.scss
+++ b/assets/scss/layouts/_default/list.scss
@@ -17,7 +17,7 @@
 @media only screen and (max-width: $sp-width) {
     .list {
         &__title {
-            margin: auto;
+            margin-top: 10px;
         }
     }
 }
