--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -6,6 +6,7 @@
 @import "layouts/_default/baseof.scss";
 @import "layouts/_default/list.scss";
 @import "layouts/_default/single.scss";
+@import "layouts/_default/terms.scss";
 @import "layouts/index.scss";
 @import "layouts/404.scss";
 @import "layouts/partials/header.scss";
